--- a/iteration_and_listcols.html
+++ b/iteration_and_listcols.html
@@ -468,7 +468,7 @@ div.tocify {
 <h2>Overview</h2>
 <div id="learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
-<p>Use loops, apply and map functions, and simulate datasets in R.</p>
+<p>There are stops along the way, but our goal is to use map functions and iterate over listcolumns in data frames.</p>
 </div>
 <div id="slide-deck" class="section level3">
 <h3>Slide Deck</h3>
@@ -489,7 +489,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/61PbKHQWh6A"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
