--- a/writing_functions.html
+++ b/writing_functions.html
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/wd44ZlHmlLQ"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -712,16 +712,16 @@ dynamite_reviews</code></pre>
 <pre><code>## # A tibble: 50 x 3
 ##    title                               stars text                               
 ##    &lt;chr&gt;                               &lt;dbl&gt; &lt;chr&gt;                              
-##  1 I LOVE THIS MOVIE                       5 &quot;THIS MOVIE IS SO FUNNY ONE OF MY …
-##  2 Don&#39;t you wish you could go back?       5 &quot;Watch it 100 times. Never. Gets. …
-##  3 Stupid, but very funny!                 5 &quot;If you like stupidly funny &#39;90s t…
-##  4 The beat                                5 &quot;The best&quot;                         
-##  5 Hilarious                               5 &quot;Super funny! Loved the online ren…
-##  6 Love this movie                         5 &quot;We love this product.  It came in…
-##  7 Entertaining, limited quality           4 &quot;Entertainment level gets a 5 star…
-##  8 Boo                                     1 &quot;We rented this movie because our …
-##  9 Movie is still silly fun....amazon…     1 &quot;We are getting really frustrated …
-## 10 Brilliant and awkwardly funny.          5 &quot;I&#39;ve watched this movie repeatedl…
+##  1 Great Value                             5 &quot;Great Value&quot;                      
+##  2 I LOVE THIS MOVIE                       5 &quot;THIS MOVIE IS SO FUNNY ONE OF MY …
+##  3 Don&#39;t you wish you could go back?       5 &quot;Watch it 100 times. Never. Gets. …
+##  4 Stupid, but very funny!                 5 &quot;If you like stupidly funny &#39;90s t…
+##  5 The beat                                5 &quot;The best&quot;                         
+##  6 Hilarious                               5 &quot;Super funny! Loved the online ren…
+##  7 Love this movie                         5 &quot;We love this product.  It came in…
+##  8 Entertaining, limited quality           4 &quot;Entertainment level gets a 5 star…
+##  9 Boo                                     1 &quot;We rented this movie because our …
+## 10 Movie is still silly fun....amazon…     1 &quot;We are getting really frustrated …
 ## # … with 40 more rows</code></pre>
 </div>
 <div id="loading-lotr-data" class="section level4">
