--- a/simulation.html
+++ b/simulation.html
@@ -467,7 +467,7 @@ div.tocify {
 <h2>Overview</h2>
 <div id="learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
-<p>Use loop and apply functions to simulate data, and explore statistical properties of common estimation methods using simulations.</p>
+<p>Use iteration methods to simulate data, and explore statistical properties of common estimation methods under repeated sampling using simulations.</p>
 </div>
 <div id="slide-deck" class="section level3">
 <h3>Slide Deck</h3>
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/CFOjyOIST9w"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
